Fix background attachment for header on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3894,9 +3894,7 @@ input, select, textarea {
 
 		}
 
-	body.is-mobile #main > header {
-		background-attachment: fixed;
-	}
+
 
 /* Footer */
 
